TWINS-433: code review fixes